# ehr-langchain-app

./: .gitignore  README.md  factos.py  pyproject.toml  top_products_report.html  user_count.html
apps/agents/: main.py
apps/agents/handlers/: chat_model_start_handler.py
apps/agents/tools/: report.py  sql.py
apps/fact_app/: main.py  prompt.py
apps/facts/: redundant_filter_retriever.py
apps/pdf/: docker-compose.yaml
apps/pdf/app/chat/: chat.py  create_embeddings.py  redis.py  score.py
apps/pdf/app/chat/callbacks/: stream.py
apps/pdf/app/chat/chains/: retrieval.py  streamable.py
apps/pdf/app/chat/llms/: __init__.py  chatopenai.py
apps/pdf/app/chat/memories/: sql_memory.py  window_memory.py
apps/pdf/app/chat/memories/history/: sql_history.py
apps/pdf/app/chat/tracing/: langfuse.py
apps/pdf/app/chat/vector_stores/: pinecone.py
apps/pdf/app/web/views/: conversation_views.py
fact_app/: prompt.py
notebooks/: scores.ipynb
