[tool.poetry]
name = "ehr-langchain-app"
version = "0.1.0"
description = ""
authors = ["Quyen Pham Khac <phamkhacquyen1996@gmail.com>"]
readme = "README.md"
packages = [{include = "ehr_langchain_app"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.3"
openai = "^1.9.0"
tiktoken = "^0.5.2"
chromadb = "^0.4.22"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.3"
pyboxen = "^1.2.0"
pydantic = "^2.6.0"
boto3 = "^1.34.30"
celery = "^5.3.6"
flask = "^3.0.1"
click = "^8.1.7"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
werkzeug = "^3.0.1"
invoke = "^2.2.0"
pinecone-client = "2.2.2"
pypdf = "3.15.4"
watchdog = "3.0.0"
langfuse = "^2.7.3"
backoff = "2.2.1"
redis = "^5.0.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
